exercises/full-stack-example/nodejs-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-api
  namespace: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-api
  template:
    metadata:
      labels:
        app: nodejs-api
    spec:
      containers:
        - name: nodejs-api
          image: agjs/test
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: config-volume
              mountPath: /app/config
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nodejs-api-pvc
        - name: config-volume
          configMap:
            name: nodejs-api-configmap
