exercises/full-stack-example/nodejs-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api
  namespace: nodejs
spec:
  selector:
    app: nodejs-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
