exercises/full-stack-example/nodejs-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: nodejs
spec:
  ingressClassName: traefik
  rules:
    - host: nodejs.local.host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-api
                port:
                  number: 80
